# SSR

./: .gitignore  .gitmodules  AI Project 记录.md  README.md
novafold/: a.out  archiveII_invalid.lst  archiveII_pseudoknot_test.lst  archiveII_pseudoknot_train.lst  archiveII_valid_test.lst  arguments.py  benchmark.py  benchmark_archii.py  data_cleaning  data_cleaning.cpp  dataset.py  debug.ipynb  finaltest_valid_test.lst  finaltest_valid_train.lst  gt.txt  inference.py  inference_without_gt.py  loss.py  predict.py  train.py  utils.py
novafold/data/: RNAStrAlign600-train.lst  TR0-canonicals.lst  TS0-canonicals.lst  TestSetA.lst  TestSetB.lst  TrainSetA.lst  TrainSetB.lst  VL0-canonicals.lst  archiveII.lst  archiveII_cleaned.lst  archiveII_pseudoknot.lst  archiveII_valid.lst  archiveII_valid_train.lst  bpRNAnew.nr500.canonicals.lst  final_test.lst  finaltest_invalid.lst  finaltest_valid_all.lst  finaltest_valid_test.lst  inference_data.lst  invalid.lst  pseudoknot_test.lst  pseudoknot_train.lst  valid_test.lst  valid_train.lst
novafold/data/FinalTest/: a.out  process.ipynb  st2bpseq.cpp  test10117.bpseq  test10355.bpseq  test10429.bpseq  test10674.bpseq  (+30 more)
novafold/models/linearfold/: CMakeCache.txt  CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake  interface.cpp
novafold/models/linearfold/src/: LinearFold.cpp  LinearFold.h
novafold/visualization/: 1  2  circular_plot.tex  draw_circular_plot  ecoli_tRNA
novafold/wandb/: latest-run
scripts/: benchmark.sh  inference.sh  inference_without_gt.sh  test_archii.sh  test_givenset.sh  train_mxfold2.sh
(+44253 files in other folders)
